// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPage direction can be row 1`] = `
<div
  class="euiPage css-1d9eeh1-euiPage-row-grow-euiPageRestictWidthStyles"
/>
`;

exports[`EuiPage grow can be false 1`] = `
<div
  class="euiPage css-ept7hg-euiPage-row-euiPageRestictWidthStyles"
/>
`;

exports[`EuiPage is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPage testClass1 testClass2 css-1d9eeh1-euiPage-row-grow-euiPageRestictWidthStyles"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPage paddingSize l is rendered 1`] = `
<div
  class="euiPage css-emgy6c-euiPage-row-grow-l-euiPageRestictWidthStyles"
/>
`;

exports[`EuiPage paddingSize m is rendered 1`] = `
<div
  class="euiPage css-10uc2yv-euiPage-row-grow-m-euiPageRestictWidthStyles"
/>
`;

exports[`EuiPage paddingSize none is rendered 1`] = `
<div
  class="euiPage css-1d9eeh1-euiPage-row-grow-euiPageRestictWidthStyles"
/>
`;

exports[`EuiPage paddingSize s is rendered 1`] = `
<div
  class="euiPage css-xc0w4x-euiPage-row-grow-s-euiPageRestictWidthStyles"
/>
`;

exports[`EuiPage paddingSize xl is rendered 1`] = `
<div
  class="euiPage css-1ufmozm-euiPage-row-grow-xl-euiPageRestictWidthStyles"
/>
`;

exports[`EuiPage paddingSize xs is rendered 1`] = `
<div
  class="euiPage css-1o4grjn-euiPage-row-grow-xs-euiPageRestictWidthStyles"
/>
`;

exports[`EuiPage restrict width can be set to a custom number 1`] = `
<div
  class="euiPage css-vpgzf7-euiPage-row-grow-euiPageRestictWidthStyles"
/>
`;

exports[`EuiPage restrict width can be set to a custom value and does not override custom style 1`] = `
<div
  class="euiPage css-1vcr6lf-euiPage-row-grow-euiPageRestictWidthStyles"
  style="color:red"
/>
`;

exports[`EuiPage restrict width can be set to a default 1`] = `
<div
  class="euiPage css-3u54hk-euiPage-row-grow-euiPageRestictWidthStyles"
/>
`;
